src/cs/TxTraktor/Source/Antlr/CfgGramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CfgGram.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class CfgGramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, EXPRESSION_END=28, ONTOLOGY_SEPARATOR_PREFIX=29, 
		NUMBER=30, STARTS_BIG=31, CYRILLIC_STARTS_BIG=32, ALL_SMALL=33, CYRILLIC_ALL_SMALLL=34, 
		REG_STRING_VALUE=35, LEMMA_STRING_VALUE=36, MORPH_STRING_VALUE=37, STRING_VALUE=38, 
		EXTENTION_VALUE=39, LIST_POSTFIX=40, WS=41, COMMENT=42, LINE_COMMENT=43;
	public const int
		RULE_gram = 0, RULE_grammar_name = 1, RULE_grammar_lang = 2, RULE_imports = 3, 
		RULE_imprt = 4, RULE_grammar_import = 5, RULE_imp_src_grammar_name = 6, 
		RULE_imp_local_grammar_name = 7, RULE_nonterm_import = 8, RULE_imp_nonterm_elem = 9, 
		RULE_imp_src_nonterminal_name = 10, RULE_imp_local_nonterminal_name = 11, 
		RULE_rules = 12, RULE_rule = 13, RULE_rule_name = 14, RULE_rule_expression = 15, 
		RULE_rule_expression_list = 16, RULE_rule_extension_query = 17, RULE_rule_extention_query_text = 18, 
		RULE_rule_extention_type = 19, RULE_rule_item = 20, RULE_rule_item_head_flag = 21, 
		RULE_rule_item_main_key = 22, RULE_rule_inline_expression = 23, RULE_rule_item_static_main_key = 24, 
		RULE_rule_item_static_main_key_lemma = 25, RULE_rule_item_static_main_key_reg = 26, 
		RULE_rule_item_static_main_key_morph = 27, RULE_rule_item_static_main_key_string = 28, 
		RULE_rule_item_static_main_key_short_nonterm = 29, RULE_rule_item_static_main_key_full_nonterm = 30, 
		RULE_rule_item_variable_name = 31, RULE_rule_item_counter = 32, RULE_rule_item_plus_counter = 33, 
		RULE_rule_item_star_counter = 34, RULE_rule_item_question_counter = 35, 
		RULE_rule_item_number_counter = 36, RULE_rule_item_number_counter_min = 37, 
		RULE_rule_item_number_counter_max = 38, RULE_rule_item_local_name = 39, 
		RULE_rule_item_conditions = 40, RULE_rule_item_condition = 41, RULE_rule_item_condition_negation = 42, 
		RULE_rule_item_condition_flag = 43, RULE_rule_item_condition_key_pair = 44, 
		RULE_rule_item_condition_key = 45, RULE_rule_item_condition_value_list = 46, 
		RULE_rule_item_condition_value = 47, RULE_rule_item_condition_value_literal = 48, 
		RULE_rule_item_condition_value_string = 49, RULE_rule_static_vars = 50, 
		RULE_rule_static_var = 51, RULE_rule_static_var_name = 52, RULE_rule_static_var_value = 53, 
		RULE_rule_static_string_value = 54, RULE_rule_static_integer_value = 55, 
		RULE_rule_static_float_value = 56, RULE_rule_static_bool_value = 57, RULE_rule_template = 58, 
		RULE_rule_template_member = 59, RULE_rule_template_member_key = 60, RULE_rule_template_member_value = 61, 
		RULE_rule_template_value = 62, RULE_rule_template_value_list = 63, RULE_rule_template_value_name_reference = 64, 
		RULE_rule_template_value_name_reference_key = 65, RULE_rule_template_value_name_reference_value = 66, 
		RULE_rule_template_value_number_reference = 67, RULE_rule_template_value_number_reference_key = 68, 
		RULE_rule_template_value_number_reference_value = 69, RULE_rule_template_value_string = 70, 
		RULE_rule_template_value_integer = 71, RULE_rule_template_value_float = 72, 
		RULE_rule_template_value_bool = 73, RULE_string_type_value = 74, RULE_integer_type_value = 75, 
		RULE_float_type_value = 76, RULE_bool_type_value = 77;
	public static readonly string[] ruleNames = {
		"gram", "grammar_name", "grammar_lang", "imports", "imprt", "grammar_import", 
		"imp_src_grammar_name", "imp_local_grammar_name", "nonterm_import", "imp_nonterm_elem", 
		"imp_src_nonterminal_name", "imp_local_nonterminal_name", "rules", "rule", 
		"rule_name", "rule_expression", "rule_expression_list", "rule_extension_query", 
		"rule_extention_query_text", "rule_extention_type", "rule_item", "rule_item_head_flag", 
		"rule_item_main_key", "rule_inline_expression", "rule_item_static_main_key", 
		"rule_item_static_main_key_lemma", "rule_item_static_main_key_reg", "rule_item_static_main_key_morph", 
		"rule_item_static_main_key_string", "rule_item_static_main_key_short_nonterm", 
		"rule_item_static_main_key_full_nonterm", "rule_item_variable_name", "rule_item_counter", 
		"rule_item_plus_counter", "rule_item_star_counter", "rule_item_question_counter", 
		"rule_item_number_counter", "rule_item_number_counter_min", "rule_item_number_counter_max", 
		"rule_item_local_name", "rule_item_conditions", "rule_item_condition", 
		"rule_item_condition_negation", "rule_item_condition_flag", "rule_item_condition_key_pair", 
		"rule_item_condition_key", "rule_item_condition_value_list", "rule_item_condition_value", 
		"rule_item_condition_value_literal", "rule_item_condition_value_string", 
		"rule_static_vars", "rule_static_var", "rule_static_var_name", "rule_static_var_value", 
		"rule_static_string_value", "rule_static_integer_value", "rule_static_float_value", 
		"rule_static_bool_value", "rule_template", "rule_template_member", "rule_template_member_key", 
		"rule_template_member_value", "rule_template_value", "rule_template_value_list", 
		"rule_template_value_name_reference", "rule_template_value_name_reference_key", 
		"rule_template_value_name_reference_value", "rule_template_value_number_reference", 
		"rule_template_value_number_reference_key", "rule_template_value_number_reference_value", 
		"rule_template_value_string", "rule_template_value_integer", "rule_template_value_float", 
		"rule_template_value_bool", "string_type_value", "integer_type_value", 
		"float_type_value", "bool_type_value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'grammar'", "'lang'", "'import'", "'as'", "'from'", "','", "'->'", 
		"'|'", "'<'", "'!'", "'('", "')'", "'$'", "'+'", "'*'", "'?'", "'{'", 
		"'}'", "'>'", "'~'", "'='", "'#set'", "'['", "']'", "'-'", "'true'", "'false'", 
		"';'", "'.'", null, null, null, null, null, null, null, null, null, null, 
		"'[]'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "EXPRESSION_END", "ONTOLOGY_SEPARATOR_PREFIX", 
		"NUMBER", "STARTS_BIG", "CYRILLIC_STARTS_BIG", "ALL_SMALL", "CYRILLIC_ALL_SMALLL", 
		"REG_STRING_VALUE", "LEMMA_STRING_VALUE", "MORPH_STRING_VALUE", "STRING_VALUE", 
		"EXTENTION_VALUE", "LIST_POSTFIX", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CfgGram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CfgGramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CfgGramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CfgGramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class GramContext : ParserRuleContext {
		public Grammar_nameContext grammar_name() {
			return GetRuleContext<Grammar_nameContext>(0);
		}
		public RulesContext rules() {
			return GetRuleContext<RulesContext>(0);
		}
		public Grammar_langContext grammar_lang() {
			return GetRuleContext<Grammar_langContext>(0);
		}
		public ImportsContext imports() {
			return GetRuleContext<ImportsContext>(0);
		}
		public GramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gram; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterGram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitGram(this);
		}
	}

	[RuleVersion(0)]
	public GramContext gram() {
		GramContext _localctx = new GramContext(Context, State);
		EnterRule(_localctx, 0, RULE_gram);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156; Match(T__0);
			State = 157; grammar_name();
			State = 158; Match(EXPRESSION_END);
			State = 163;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 159; Match(T__1);
				State = 160; grammar_lang();
				State = 161; Match(EXPRESSION_END);
				}
			}

			State = 166;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2 || _la==T__4) {
				{
				State = 165; imports();
				}
			}

			State = 168; rules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Grammar_nameContext : ParserRuleContext {
		public ITerminalNode STARTS_BIG() { return GetToken(CfgGramParser.STARTS_BIG, 0); }
		public Grammar_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterGrammar_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitGrammar_name(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_nameContext grammar_name() {
		Grammar_nameContext _localctx = new Grammar_nameContext(Context, State);
		EnterRule(_localctx, 2, RULE_grammar_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170; Match(STARTS_BIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Grammar_langContext : ParserRuleContext {
		public ITerminalNode ALL_SMALL() { return GetToken(CfgGramParser.ALL_SMALL, 0); }
		public Grammar_langContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_lang; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterGrammar_lang(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitGrammar_lang(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_langContext grammar_lang() {
		Grammar_langContext _localctx = new Grammar_langContext(Context, State);
		EnterRule(_localctx, 4, RULE_grammar_lang);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 172; Match(ALL_SMALL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportsContext : ParserRuleContext {
		public ImprtContext[] imprt() {
			return GetRuleContexts<ImprtContext>();
		}
		public ImprtContext imprt(int i) {
			return GetRuleContext<ImprtContext>(i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imports; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterImports(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitImports(this);
		}
	}

	[RuleVersion(0)]
	public ImportsContext imports() {
		ImportsContext _localctx = new ImportsContext(Context, State);
		EnterRule(_localctx, 6, RULE_imports);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 174; imprt();
				}
				}
				State = 177;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__2 || _la==T__4 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImprtContext : ParserRuleContext {
		public Grammar_importContext grammar_import() {
			return GetRuleContext<Grammar_importContext>(0);
		}
		public Nonterm_importContext nonterm_import() {
			return GetRuleContext<Nonterm_importContext>(0);
		}
		public ImprtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imprt; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterImprt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitImprt(this);
		}
	}

	[RuleVersion(0)]
	public ImprtContext imprt() {
		ImprtContext _localctx = new ImprtContext(Context, State);
		EnterRule(_localctx, 8, RULE_imprt);
		try {
			State = 181;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 179; grammar_import();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 2);
				{
				State = 180; nonterm_import();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Grammar_importContext : ParserRuleContext {
		public Imp_src_grammar_nameContext imp_src_grammar_name() {
			return GetRuleContext<Imp_src_grammar_nameContext>(0);
		}
		public ITerminalNode EXPRESSION_END() { return GetToken(CfgGramParser.EXPRESSION_END, 0); }
		public Imp_local_grammar_nameContext imp_local_grammar_name() {
			return GetRuleContext<Imp_local_grammar_nameContext>(0);
		}
		public Grammar_importContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_import; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterGrammar_import(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitGrammar_import(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_importContext grammar_import() {
		Grammar_importContext _localctx = new Grammar_importContext(Context, State);
		EnterRule(_localctx, 10, RULE_grammar_import);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 183; Match(T__2);
			State = 184; imp_src_grammar_name();
			State = 187;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 185; Match(T__3);
				State = 186; imp_local_grammar_name();
				}
			}

			State = 189; Match(EXPRESSION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Imp_src_grammar_nameContext : ParserRuleContext {
		public ITerminalNode STARTS_BIG() { return GetToken(CfgGramParser.STARTS_BIG, 0); }
		public Imp_src_grammar_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imp_src_grammar_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterImp_src_grammar_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitImp_src_grammar_name(this);
		}
	}

	[RuleVersion(0)]
	public Imp_src_grammar_nameContext imp_src_grammar_name() {
		Imp_src_grammar_nameContext _localctx = new Imp_src_grammar_nameContext(Context, State);
		EnterRule(_localctx, 12, RULE_imp_src_grammar_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 191; Match(STARTS_BIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Imp_local_grammar_nameContext : ParserRuleContext {
		public ITerminalNode STARTS_BIG() { return GetToken(CfgGramParser.STARTS_BIG, 0); }
		public Imp_local_grammar_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imp_local_grammar_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterImp_local_grammar_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitImp_local_grammar_name(this);
		}
	}

	[RuleVersion(0)]
	public Imp_local_grammar_nameContext imp_local_grammar_name() {
		Imp_local_grammar_nameContext _localctx = new Imp_local_grammar_nameContext(Context, State);
		EnterRule(_localctx, 14, RULE_imp_local_grammar_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 193; Match(STARTS_BIG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Nonterm_importContext : ParserRuleContext {
		public Imp_src_grammar_nameContext imp_src_grammar_name() {
			return GetRuleContext<Imp_src_grammar_nameContext>(0);
		}
		public Imp_nonterm_elemContext[] imp_nonterm_elem() {
			return GetRuleContexts<Imp_nonterm_elemContext>();
		}
		public Imp_nonterm_elemContext imp_nonterm_elem(int i) {
			return GetRuleContext<Imp_nonterm_elemContext>(i);
		}
		public Nonterm_importContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nonterm_import; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterNonterm_import(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitNonterm_import(this);
		}
	}

	[RuleVersion(0)]
	public Nonterm_importContext nonterm_import() {
		Nonterm_importContext _localctx = new Nonterm_importContext(Context, State);
		EnterRule(_localctx, 16, RULE_nonterm_import);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 195; Match(T__4);
			State = 196; imp_src_grammar_name();
			State = 197; Match(T__2);
			State = 198; imp_nonterm_elem();
			State = 203;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 199; Match(T__5);
				State = 200; imp_nonterm_elem();
				}
				}
				State = 205;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 206; Match(EXPRESSION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Imp_nonterm_elemContext : ParserRuleContext {
		public Imp_src_nonterminal_nameContext imp_src_nonterminal_name() {
			return GetRuleContext<Imp_src_nonterminal_nameContext>(0);
		}
		public Imp_local_nonterminal_nameContext imp_local_nonterminal_name() {
			return GetRuleContext<Imp_local_nonterminal_nameContext>(0);
		}
		public Imp_nonterm_elemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imp_nonterm_elem; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterImp_nonterm_elem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitImp_nonterm_elem(this);
		}
	}

	[RuleVersion(0)]
	public Imp_nonterm_elemContext imp_nonterm_elem() {
		Imp_nonterm_elemContext _localctx = new Imp_nonterm_elemContext(Context, State);
		EnterRule(_localctx, 18, RULE_imp_nonterm_elem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 208; imp_src_nonterminal_name();
			State = 211;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__3) {
				{
				State = 209; Match(T__3);
				State = 210; imp_local_nonterminal_name();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Imp_src_nonterminal_nameContext : ParserRuleContext {
		public ITerminalNode STARTS_BIG() { return GetToken(CfgGramParser.STARTS_BIG, 0); }
		public Imp_src_nonterminal_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imp_src_nonterminal_name; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.EnterImp_src_nonterminal_name(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICfgGramListener typedListener = listener as ICfgGramListener;
			if (typedListener != null) typedListener.ExitImp_src_nonterminal_name(this);
		}
	}
